tests/rosetta/out/Smalltalk/chat-server.out
/tmp/chat-server.st:5: parse error, expected ']'
