tests/rosetta/out/Smalltalk/chat-server.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| removeName out n main clients broadcast add send remove |
removeName := [:names :name | out := {}.
names do: [:n |.
((n ~= name)) ifTrue: [
out := out copyWith: n.
] .
].
.
out. ].
main := [ clients := {}.
broadcast := [:msg | Transcript show: (msg) printString; cr. ].
add := [:name | clients := clients copyWith: name.
broadcast value: (((('+++ "') + name)) + ('" connected +++
')). ].
send := [:name :msg | broadcast value: (((((name + ('> '))) + msg)) + '
'). ].
remove := [:name | clients := removeName value: clients value: name.
broadcast value: (((('--- "') + name)) + ('" disconnected ---
')). ].
add value: 'Alice'.
add value: 'Bob'.
send value: 'Alice' value: 'Hello Bob!'.
send value: 'Bob' value: 'Hi Alice!'.
remove value: 'Bob'.
remove value: 'Alice'.
broadcast value: 'Server stopping!
'. ].
main value.
